# anisotropy

./: .gitignore  .gitmodules  INSTALL.rst  ISSUES.rst  LICENSE  README.md  README.rst  TODO  TODO.md  anisotrope_cube.py  anisotrope_cube_bc.py  anisotrope_cube_fc.py  anisotropy.py  anisotropy.sh  config.py  environment.yaml  environment.yml  notes.md  pyproject.toml  requirements-jupyter.txt  requirements.txt  run.py  run.sh  samples.py  samples_.py  setup.py  simple
.circleci/: config.yml
anisotropy/: __init__.py  __main__.py  anisotropy.py  bodyCentered.py  core.py  db.py  default.toml  faceCentered.py  genmesh.py  meshing.py  models.py  shaping.py  simple.py  utils.py
anisotropy/cli/: __init__.py  cli.py  utils.py
anisotropy/config/: bashrc  default.toml
anisotropy/core/: __init__.py  cli.py  config.py  database.py  main.py  models.py  parallel.py  postProcess.py  postprocess.py  runner.py  utils.py
anisotropy/database/: __init__.py  database.py  db.py  models.py  tables.py  utils.py
anisotropy/gui/: __init__.py  about.py  app.py  database.py  main.py  runner.py  settings.py  styles.py  utils.py  visualization.py
anisotropy/meshing/: __init__.py  conversion.py  mesh.py  metrics.py  utils.py
anisotropy/newgui/: geometry.py  newgui.py
anisotropy/openfoam/: __init__.py  application.py  case.py  commands.py  conversion.py  file.py  foamcase.py  foamfile.py  meshConversion.py  meshManipulation.py  miscellaneous.py  parallelProcessing.py  presets.py  runner.py  runnerPresets.py  solvers.py  utils.py
anisotropy/salomepl/: geometry.py  mesh.py  utils.py
anisotropy/samples/: __init__.py  bodyCentered.py  faceCentered.py  simple.py  structure.py
anisotropy/shaping/: __init__.py  bodyCentered.py  faceCentered.py  occExtended.py  periodic.py  (+4 more)
conf/: bashrc  config.toml
data/: .gitignore  analyze.ipynb  anisotropy.db  anisotropy.toml
doc/: Makefile  pdflatex17013.fls  report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc  title.tex
docs/: Makefile  netgen.rst
extra/: fillet-radius.py  theta-flowrate.py
notes/: images.rst  mesh.rst  of-tools.rst  sphinx.rst
openfoam/: __init__.py  application.py  meshConversion.py  meshManipulation.py  miscellaneous.py  openfoam.py  parallelProcessing.py  solvers.py  utils.py
playground/: analytics.ipynb  anisotropy-playground.ipynb  database.ipynb  fc_section.tex  geometry.ipynb  graph.gv  mesh.py  meshConvert.py  newtest.db  newtest2.db  salome-run.py  test_db.db  test_mesh.py  test_mesh_2.py  test_models.py  test_smesh.py  training-models.ipynb  untitled.tex
postProcessing/: showFailed
salome/: genmesh.py  geometry.py  mesh.py
salomepl/: README.md  __init__.py  bodyCentered.py  faceCentered.py  genmesh.py  geometry.py  mesh.py  simple.py  utils.py
samples/: __init__.py  bodyCentered.py  bodyCenteredCubic.py  faceCentered.py  faceCenteredCubic.py  simple.py  simpleCubic.py  test.py
src/: anisotropeCubic.py  applogger.py  bodyCenteredCubic.py  faceCenteredCubic.py  foam.py  foam_utils.py  genmesh.py  geometry_utils.py  gutils.py  mesh_utils.py  paraview_utils.py  prefoam.py  salome_utils.py  samples.py  simpleCubic.py  structure.gv  utils.py
temp/: anisotrope_cube_bc.py  bodyCenteredCubic.step  faceCenteredCubic.old.py  mutils.old.py  paraview.1.py  run.dirty.py  splitpyramids.py  test.py
tests/: anisotropy-cli.py  test_anisotropy.py  test_core.py  test_database.py  test_faceCentered_lattice.py  test_shaping.py
worksheet/: cube_010320.py  cube_020320.py  cube_020320_2.py  cube_160220.py  runrun.py  test.py
(+104 files in other folders)
