[tool.poetry]
name = "anisotropy"
version = "1.2.0"
description = "Anisotropy of permeability in the periodic porous media."
authors = ["George Kusayko <gkusayko@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.rst"
repository = "https://github.com/L-Nafaryus/anisotropy"
keywords = ["anisotropy", "console", "CFD"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9"
]
packages = [
    { include = "anisotropy" }
]

[tool.poetry.scripts]
anisotropy = "anisotropy.core.cli:anisotropy"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
toml = "^0.10.2"
peewee = "^3.14.8"
numpy = "^1.21.4"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
pyfoam = "^2021.6"
click = "^8.0.3"
pyqt5 = "^5.15.6"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
vulture = "^2.3"
pytest-cov = "^3.0.0"
pycodestyle = "^2.8.0"
pydeps = {version = "^1.10.12", optional = true}
peewee-erd = {version = "^0.1.3", optional = true}
Sphinx = {version = "^4.3.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
pytest-json-report = "^1.4.1"

[tool.poetry.extras]
analyze = ["jupyterlab", "seaborn", "sklearn"]
docs = ["Sphinx", "sphinx-rtd-theme", "pydeps", "peewee-erd"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


